# Arcturus

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package.json
lib/Cortex/: BackpropagationTrainer.cpp  BackpropagationTrainer.h  CMakeLists.txt  Genotype.cpp  Genotype.h  Network.cpp  Network.h
src/: addon.cpp  index.js  main.cpp  module.cpp
